2006-08-23    <Jim@LS1>

	* xspim/xspim.c, spim/spim.c [Jeremy Huddleston
	jeremyhu@eecs.berkeley.edu]:
	Read SPIM_EXCEPTION_HANDLER environment variable.

2006-08-20    <Jim@LS1>

	* CPU/scanner.l [many xspim bugs on Linux]:
	flex 2.5.33 changed the polarity of the yy_init flag without
	providing a backwardly compatible way of setting it (sigh).

	* spim-utils.c [Jeremy Huddleston jeremyhu@berkeley.edu]:
	Allow a semicolon deliminated list of exception files, rather than
	just a single file.

	* parser.y [Piotr Bieganowski bieganow@wsisiz.edu.pl]:
	Memory corruption caused spim to crash when a label was defined
	twice in succession.

2006-08-19    <Jim@LS1>

	* PCSPimView.cpp:
	Update register and memory display even after a parse error when
	reading a file.

	* parser.y, scanner.{h, l} [Jordi Ferrer Plana jferrerp@eia.udg.es]:
	Added unnecessary null character between items in a list of
	strings from .asciiz.

2005-11-25    <Jim@LS1>

	* xspim/Imakefile, spim/Makefile [Johannes Grassler
	johannes.grassler@freenet.de]:
	Fix paths for installing exception.s.

2005-08-28    <Jim@LS1>

	* Documentation/TeX/spim.tex:
	Change psfig -> epsfig.

	* SPIM 7.2.1 Released

	* spim.c:
	Translate CR -> NL on console input and echo CR following NL on
	console output (to make IO consistent across all three platforms).

	* spim.c:
	Did not properly set console flags when passing console to program.

	* xspim.c:
	Fixed handling of carriage return and modifier keys in xspim
	memory mapped IO.

	* xspim.c:
	Do not ignore trailing filename argument to xspim.

	* {spim,xspim}/Configure:
	Use the "env" command to invoke bash, so pathname is not hardwired
	into shell script (eg for Solaris).

2005-08-07    <Jim@LS1>

	* SPIM 7.2 Released

	* README spim/Makfile
	General cleanup of documentation in README files.
	Eliminated Makefile.Cygwin in spim directory in favor of single
	file that worked on Unix and Cygwin.

2005-07-25    <Jim@LS1>
